# aws-lambda-api-rust

./: .gitignore  LICENSE  Makefile  README.md
src/: libpq.so.5
src/lambdas/rust-api/: Cargo.toml
src/lambdas/rust-api/src/: db.rs  main.rs
src/terraform/: main.tf
